apply spotless format